--- a/content/posts/hello-world/index.mdx
+++ b/content/posts/hello-world/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Hello World (for example)
+title: Hello World (for example22)
 date: 2019-04-15
 image: ./sunset-beach.jpg
 imageAlt: A beach at sunset with crashing waves.
