--- a/content/posts/my-second-post.mdx
+++ b/content/posts/my-second-post.mdx
@@ -5,8 +5,4 @@ image: 'https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-1.
 imageAlt: Laptop on a desk with VS Code open.
 ---
 
-Wow! I love blogging so much already.
-
-Did you know that "despite its name, salted duck eggs can also be made from chicken eggs, though the taste and texture will be somewhat different, and the egg yolk will be less rich."? ([Wikipedia Link](https://en.wikipedia.org/wiki/Salted_duck_egg))
-
-Yeah, I didn't either.
+test cache?
